--- a/css/geradorSenha.css
+++ b/css/geradorSenha.css
@@ -30,7 +30,9 @@ body {
 
 .container-items {
     background-color: rgba(0, 0, 0, 40%);
-    width: 500px;
+    min-width: 400px;
+    max-width: 480px;
+    width: 35%;
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -41,6 +43,14 @@ body {
     backdrop-filter: blur(5px);
     box-sizing: border-box;
     border: 1px solid rgba(64, 230, 147, 10%);
+    transition: all 1s;
+    
+    
+
+}
+
+.container-items:hover {
+    border: 1px solid rgba(64, 230, 147, 30%);
 }
 
 .container-cabecalho {
@@ -49,8 +59,10 @@ body {
     justify-content: center;
     align-items: center;
     color: aliceblue;
+    text-align: center;
     font-size: 1.2em;
     margin-bottom: 60px;
+    
 }
 
 .container-cabecalho p {
@@ -71,6 +83,8 @@ body {
 }
 
 .campo-senha {
+    width: 80%;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -78,13 +92,14 @@ body {
     gap: 20px;
     margin-top: 20px;
     
+    
 }
 
 .senha-gerada {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 400px;
     height: 40px;  
     border-bottom: solid 1px white;
     color: aliceblue;
