--- a/css/geradorSenha.css
+++ b/css/geradorSenha.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@font-face {
+    font-family: 'Blanka';
+    src: url('../fonts/Blanka-Regular.otf') format('truetype');
+  }
 
 * {
     margin: 0;
@@ -44,8 +48,8 @@ body {
     box-sizing: border-box;
     border: 1px solid rgba(64, 230, 147, 10%);
     transition: all 1s;
-    
-    
+
+
 
 }
 
@@ -61,13 +65,29 @@ body {
     color: aliceblue;
     text-align: center;
     font-size: 1.2em;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
+    margin-top: 40px;
+    gap: 5px;
+    
+    
+    
+
+}
+
+.cadeado-icon {
+    
+    animation-name: "anima-cadeado";
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
     
 }
+
 
 .container-cabecalho p {
     color: rgb(141, 141, 141);
 }
+
 .container-set {
     display: flex;
     flex-direction: column;
@@ -91,8 +111,8 @@ body {
     align-items: center;
     gap: 20px;
     margin-top: 20px;
-    
-    
+
+
 }
 
 .senha-gerada {
@@ -100,7 +120,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;  
+    height: 40px;
     border-bottom: solid 1px white;
     color: aliceblue;
 }
@@ -134,7 +154,7 @@ body {
 
 .bnt-copy {
     cursor: pointer;
-    
+
 }
 
 .bnt-copy:hover {
@@ -143,4 +163,24 @@ body {
 
 .bnt-copy:active {
     font-size: 0.9em;
+}
+
+h1{
+    color: rgb(255, 255, 255);
+    font-family: 'Blanka';
+    animation-name: "anima-cadeado";
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    
+}
+
+@keyframes anima-cadeado {
+    from{
+        color: rgb(255, 255, 255)
+    }
+    to {
+        color: rgb(64, 230, 147)
+        
+    }
 }
