--- a/css/geradorSenha.css
+++ b/css/geradorSenha.css
@@ -172,7 +172,7 @@ h1 {
     font-family: 'Blanka';
     letter-spacing: 2px;
     font-size: 2.5em;
-
+    font-family: 'Blanka'
 }
 
 @keyframes anima-cadeado {
