--- a/css/jogodavelha.css
+++ b/css/jogodavelha.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Patua+One&family=Rubik+Glitch&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,11 +8,26 @@
 
 body {
     height: 100vh;
-    background-color: #FAAB36;
+    background-color: rgb(60, 61, 61);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Luckiest Guy', cursive;
+    background: url("https://rare-gallery.com/uploads/posts/501500-artist-4k-widescreen.jpg");
+    background-size: cover;
+    background-image: center;
+}
 
+.game-container {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(5px);
 }
 
 .tela-1 {
@@ -18,25 +35,36 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 800px;
     max-width: 900px;
-    height: 80%;
-    background-color: white;
+    height: 70%;
+    background-color: rgba(1, 202, 185, 20%);
     border-radius: 15px;
     gap: 10px;
+    color: aliceblue;
+    backdrop-filter: blur(20px);
+    border: 1px solid rgba(1, 202, 185, 50%);
+    font-size: 40px;
+
+
     
 }
 
 .btn-jogar {
     width: 200px;
     height: 40px;
-    background-color: rgb(24, 124, 255);
+    background-color: rgb(1, 202, 185);
     border: none;
     border-radius: 10px;
     font-size: 18px;
-    color: aliceblue;
     font-weight: bold;
+    transition: all 1s;
 }
+
+.btn-jogar:hover{
+    transform: translateY(-5px)
+}
+
 
 .tela-2 {
     display: flex;
@@ -45,10 +73,30 @@ body {
     align-items: center;
     width: 800px;
     height: 800px;
-    background-color: #249EA0;
+    background-color: rgba(1, 202, 185, 20%);
     border-radius: 15px;
-    gap: 10px;
+    gap: 0px;
+    border: solid 1px rgba(2, 178, 190, 0.3);
+    backdrop-filter: blur(10px);
     
+}
+
+.jogada-vez {
+    color: aliceblue;
+    font-size: 40px;
+    animation-name: "opacidade";
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes opacidade {
+    from{
+        color:aliceblue;
+    }
+    to{
+        color: transparent;
+    }
 }
 
 .jogo-area {
@@ -75,13 +123,15 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(0,0,0,50%);
     border-radius: 15px;
     transition: all 1s;
+    border: 1px solid rgba(0, 0, 0, 50%);
 }
 
 .quadrados:hover {
-    background-color: rgb(197, 197, 197);
+    border: 1px solid rgba(1, 202, 185, 0.5);
+    
 
 }
 
@@ -137,6 +187,7 @@ body {
     width: 100vw;
     background-color: rgba(0,0,0,80%);
     box-sizing: border-box;
+    font-size: 1.3em;
 }
 
 .end-game {
@@ -146,12 +197,15 @@ body {
     justify-content: space-between;
     padding: 40px 0px;
     align-items: center;
-    width: 400px;
-    height: 250px;
-    background-color: rgb(24, 124, 255);
+    width: 600px;
+    height: 350px;
+    background-color: rgba(1, 202, 185, 10%);
     border-radius: 15px;
-    gap: 10px;
+    gap: 5px;
     color: aliceblue;
+    backdrop-filter: blur(20px);
+    border: 1px solid rgba(1, 202, 185, 50%);
+    font-size: 40px;
 }
 
 .btn-again {
@@ -159,8 +213,19 @@ body {
     height: 40px;
     border: none;
     border-radius: 10px;
-    background-color: #FAAB36;
+    background-color: rgb(1, 202, 185);
     font-weight: bold;
     font-size: 12px;
+    transition: all 1s;
     
+}
+
+.btn-again:hover{
+    transform: translateY(-5px)
+}
+
+.copyright {
+    color: rgba(255,255,245, 80%);
+    bottom: 10px;
+    position: absolute;
 }
