--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -12,9 +12,11 @@
 .calc-container {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(49, 49, 49);
+    background-color: rgb(46, 31, 31);
+    box-sizing: border-box;
 }
 
 .calculadora {
@@ -28,6 +30,7 @@
     border-radius: 15px;
     box-sizing: border-box;
     overflow: hidden;
+    box-shadow: -20px 10px 30px rgba(0,0,0,30%);
     
 }
 
@@ -222,4 +225,10 @@
 .mensagens div{
     display: flex;
     gap: 20px;
+}
+
+.copyright {
+    position: absolute;
+    bottom: 10px;
+    color: rgba(0,0,0,50%);
 }
