--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -92,10 +92,8 @@ main {
     gap: 10px;
     width: 500px;
     height: 100%;
-    background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
     border-radius: 15px;
     padding: 20px 20px;
-    box-shadow: 5px 10px 20px rgb(12, 12, 12);
     font-size: 1.2em;
 
 }
@@ -134,6 +132,9 @@ main {
 }
 
 .sobre-mim>.foto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     float: right;
     box-sizing: border-box;
     display: flex;
@@ -141,31 +142,13 @@ main {
     justify-content: center;
     gap: 10px;
     width: 700px;
-    height: 100%;
-    background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
+    height: 100%; 
     border-radius: 15px;
     padding: 20px 20px;
-    box-shadow: 5px 10px 20px rgb(12, 12, 12);
+    
+    
 }
 
-.foto>.imagem {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(31, 31, 31);
-    padding: 20px;
-    border-radius: 15px;
-    background-image: url("../imagens/imagem-emerson.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    transition: background-size 1s;
-
-}
-
-.foto>.imagem:hover {
-    background-size: 120%;
-}
 
 .skills {
     display: flex;
