--- a/css/meteorologia.css
+++ b/css/meteorologia.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -11,22 +12,27 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(162, 190, 211);
+    background: linear-gradient(rgb(0, 100, 167), rgb(139, 222, 255));
     color: white;
     font-family: 'Work Sans', sans-serif;
+    background: url("https://rare-gallery.com/uploads/posts/5400744-cloud-sunrise-summit-sky-scenic-cloudscape-atmosphere-horizon-sunset-mountain-visit-asium-journey-travel-photography-hiking-outdoor-nature-photography-nature-great-nature-cloud-porn-sunray-cre.jpg");
+    background-size: cover;
+    
+    
 }
 
 .container-border {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 440px;
-    height: 690px;
-    background-color: rgba(255, 255, 255, 0.3);
+    width: 470px;
+    height: 720px;
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 40px;
-    
+    backdrop-filter: blur(10px);
 }
-.container{
+
+.container {
     width: 400px;
     height: 650px;
     background-color: rgb(255, 255, 255);
@@ -38,14 +44,27 @@ body {
 
 .container-header {
     display: flex;
-    flex-direction: column;
+    flex-direction: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 15%;
-    border-bottom: 1px solid rgb(224, 224, 224);
-    color: black
+    border-bottom: 1px solid rgb(243, 243, 243);
+    color: rgb(79, 99, 103);
+    gap: 5px;
+    box-sizing: border-box;
+    
 }
+
+#refresh {
+    filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(70%) contrast(100%);
+}
+
+#refresh:hover {
+    filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(80%) contrast(100%);
+    cursor: pointer;
+}
+
 
 .container-main {
     display: flex;
@@ -54,12 +73,12 @@ body {
     align-items: center;
     width: 100%;
     height: 65%;
-    border-bottom: 1px solid rgb(224, 224, 224);
-    color: black;
+    border-bottom: 1px solid rgb(243, 243, 243);
+    color: rgb(79, 99, 103);
     font-size: 4em;
 }
 
-.main-temp{
+.main-temp {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +90,7 @@ body {
 }
 
 
-.container-footer{
+.container-footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -81,16 +100,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
 }
-.selection {
-    
-    color: black;
-    
-}
-
-
 
 #uf {
     width: 50px;
@@ -99,6 +109,7 @@ body {
     text-align: center;
     border-radius: 5px 0px 0px 5px;
     background-color: rgb(225, 242, 250);
+    cursor: pointer;
 }
 
 #municipios {
@@ -107,41 +118,69 @@ body {
     text-align: center;
     border-radius: 0px 5px 5px 0px;
     background-color: rgb(248, 248, 248);
+    cursor: pointer;
 }
 
 
-select option{
+select option {
     background-color: rgb(255, 255, 255);
-    color: rgb(27, 120, 163)
+    color: rgb(8, 8, 8);
+    cursor: pointer;
 }
 
-select:checked{
+select:checked {
     background-color: rgb(27, 120, 163);
-    
+    cursor: pointer;
+
 }
 
-#data{
-    color:black;
+#data {
+    color: black;
     margin-bottom: 30px;
 }
 
-.imagem-tempo{
-animation-name: "animar-imagem";
-animation-duration: 2s;
-animation-iteration-count: 1;
-animation-direction: normal;
+.imagem-tempo {
+    animation-name: "animar-imagem";
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
 }
 
-@keyframes animar-imagem{
-    from{
+@keyframes animar-imagem {
+    from {
         transform: translateY(-30px);
         opacity: 0%;
-        
-        
+
+
     }
-    to{
+
+    to {
         transform: translateY(0px);
-        
-        
+
+
+    }
+}
+
+@media(max-width: 500px){
+    body {
+        height: 100vH;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        color: white;
+        font-family: 'Work Sans', sans-serif;
+    }
+
+    .container-border {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 410px;
+        height: 660px;
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 40px;
+        backdrop-filter: blur(10px);
     }
 }
