--- a/css/gkanban.css
+++ b/css/gkanban.css
@@ -7,15 +7,21 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body {}
+body{
+    height: 100vh;
+    background: url("https://rare-gallery.com/uploads/posts/5410610-nature-waterfall-cliff-wallpaper-nature-wallpapers-nature-backgrounds-rainforest-rock-cascade-mountain-rocky-mountain-rocky-cliff-rocky-watrfall-low-ngle-low-angle-perspective-geen-green-green.jpg");
+    background-position: center;
+    background-repeat: none;
+    background-size: cover;
+    box-sizing: border-box;
+}
 
 .container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(rgb(147, 129, 255), rgb(97, 86, 163));
+    
     box-sizing: border-box;
 
 }
@@ -29,6 +35,7 @@ body {}
     height: 50px;
     background-color: rgba(238, 238, 238, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(6px);
 }
 
 .container-main {
@@ -39,9 +46,9 @@ body {}
     align-items: flex-start;
     padding: 10px 10px;
     box-sizing: border-box;
-    background-color: brown;
-    
-   
+
+
+
 }
 
 .container-colunas {
@@ -54,12 +61,12 @@ body {}
     gap: 10px;
     flex-wrap: wrap;
     box-sizing: border-box;
-    
-    
-   
+
+
+
 }
 
-.coluna{
+.coluna {
     display: flex;
     flex-direction: column;
     min-width: 350px;
@@ -69,7 +76,7 @@ body {}
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     box-sizing: border-box;
     overflow: hidden;
-    background-color: rgb(240, 240, 240);
+    backdrop-filter: blur(6px);
 }
 
 .column-header {
@@ -79,9 +86,48 @@ body {}
     flex-direction: column;
     width: 100%;
     font-size: 12px;
-    padding-top: 5px;
+
 }
 
+.column-header>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    font-size: 12px;
+    padding: 10px;
+
+}
+
+.color-container {
+    width: 15px;
+    height: 15px;
+    background-color: blueviolet;
+    border-radius: 50%;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: fixed;
+    right: 10px;
+
+
+}
+
+.btn-change-color {
+    display: block;
+    width: 25px;
+    height: 25px;
+    border: none;
+    outline: none;
+    border-radius: 100%;
+    border-color: transparent;
+    border-style: hidden;
+    margin: -2px;
+}
+
+.btn-change-color:hover {
+    cursor: pointer;
+}
 
 .header-destaque {
     display: flex;
@@ -114,50 +160,92 @@ body {}
     gap: 10px;
     box-sizing: border-box;
     padding-bottom: 10px;
-   
-    
+    border-bottom: 1px solid rgba(5, 5, 5, 0.1);
+
 
 }
 
 .column-footer {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 5px;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-#btn-add-card{
+.btn-add-card {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    height: 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-add-card:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
 
 }
 
-.btn-remove-coluna{
-    width: 20px;
+.btn-remove-coluna {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
     font-size: 16px;
-    background-color: none;
+    background: none;
     border: none;
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(600%) contrast(143%);
 }
 
-.card {
-    width: 100%;
-    height: 150px;
+.btn-remove-coluna:hover {
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(300%) contrast(143%);
+    cursor: pointer;
+}
+
+.card-container {
+    display: flex;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0px 1px 2px rgb(190, 190, 190);
     box-sizing: border-box;
-    padding: 10px;
+    overflow: hidden;
 }
 
-.card:hover{
+.card-container:hover {
     background-color: rgb(245, 245, 245);
+
 }
 
-h2{
+
+.card {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 300px;
+    box-sizing: border-box;
+    padding: 10px;
+    overflow: scroll;
+
+}
+
+.menu-card {
+    width: 8%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+
+
+h2 {
     font-size: 18px;
     font-weight: 300;
     color: rgb(67, 47, 80);
 }
 
-h1{
-    color: rgb(64, 40, 92); 
+h1 {
+    color: rgb(64, 40, 92);
 }
 
 .add-coluna {
@@ -167,17 +255,22 @@ h1{
     align-items: flex-start;
     width: 250px;
     height: 35px;
-    background-color:rgba(255, 255, 255,0.5);
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 8px;
-    padding: 5px;
     box-sizing: border-box;
     overflow: hidden;
-    padding: 10px;
+    padding: 8px;
+    gap: 10px;
+    backdrop-filter: blur(5px);
 }
 
 .add-coluna:hover {
-    background-color:rgba(255, 255, 255,0.6);
-    
+    background-color: rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+}
+
+.add-coluna>div {
+    display: flex;
 }
 
 
@@ -194,8 +287,9 @@ h1{
     box-sizing: border-box;
 }
 
-#btn-add-coluna {
-    width: 150px;
+#btn-add-coluna,
+.add-text-card {
+    width: 140px;
     height: 40px;
     font-size: 16px;
     background-color: rgb(20, 177, 143);
@@ -204,18 +298,108 @@ h1{
     color: white;
 }
 
-.add-coluna-footer{
+#btn-add-coluna:hover {
+    background-color: rgb(22, 192, 155);
+    cursor: pointer;
+}
+
+.add-text-card:hover {
+    background-color: rgb(22, 192, 155);
+    cursor: pointer;
+}
+
+.btn-salvar {
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    background-color: rgb(20, 177, 143);
+    border: none;
+    border-radius: 10px;
+    color: white;
+}
+
+.add-coluna-footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px
+    gap: 5px
 }
 
 
-#btn-fechar-add {
+#btn-fechar-add,
+.cancel-text-card {
     font-size: 20px;
     background: none;
     border: none;
-   
 }
+
+#btn-fechar-add,
+.cancel-text-card:hover {
+    cursor: pointer;
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(300%) contrast(143%);
+}
+
+.container-text-card {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    box-sizing: border-box;
+    gap: 10px;
+
+}
+
+.footer-text-card {
+    display: flex;
+    gap: 4px;
+
+}
+
+.input-text-card {
+    width: 100%;
+    min-height: 60px;
+    outline: none;
+    border: none;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 10px;
+    resize: none;
+
+}
+
+.text-card {
+    width: 100%;
+    min-height: 60px;
+    outline: none;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 10px;
+    resize: none;
+    background: none;
+
+}
+
+[especial] {
+    background-color: brown;
+    z-index: 2;
+}
+
+.btn-edit-card {
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(600%) contrast(143%);
+}
+
+.btn-edit-card:hover {
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(300%) contrast(143%);
+    cursor: pointer;
+}
+
+.btn-delet-card {
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(600%) contrast(143%);
+}
+
+.btn-delet-card:hover {
+    filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(300%) contrast(143%);
+    cursor: pointer;
+}
+
+
 
