--- a/css/gkanban.css
+++ b/css/gkanban.css
@@ -309,13 +309,18 @@ h1 {
 }
 
 .btn-salvar {
-    width: 100px;
+    width: 75px;
     height: 40px;
     font-size: 16px;
     background-color: rgb(20, 177, 143);
     border: none;
     border-radius: 10px;
     color: white;
+}
+
+.btn-salvar:hover {
+    background-color: rgb(22, 192, 155);
+    cursor: pointer;
 }
 
 .add-coluna-footer {
