--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -31,7 +31,7 @@ header {
     box-shadow: 5px 10px 20px rgb(25, 25, 25);
     backdrop-filter: blur(5px);
     z-index: 1;
-    
+
 
 
 }
@@ -41,7 +41,7 @@ header {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    
+
 }
 
 .instagram-icon:hover {
@@ -60,7 +60,7 @@ header {
 main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 800px 1000px 1100px 700px 700px 1000px;
+    grid-template-rows: 800px 900px 1100px 1650px 1350px 1000px;
     grid-template-areas:
         "sobre-mim"
         "skills"
@@ -96,6 +96,8 @@ main {
     border-radius: 15px;
     padding: 20px 20px;
     font-size: 1.2em;
+    gap: 20px;
+
 
 }
 
@@ -132,6 +134,16 @@ main {
 
 }
 
+.info-redes-sociais {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 20px;
+    gap: 20px;
+
+}
+
 .sobre-mim>.foto {
     display: flex;
     justify-content: center;
@@ -143,11 +155,11 @@ main {
     justify-content: center;
     gap: 10px;
     width: 700px;
-    height: 100%; 
+    height: 100%;
     border-radius: 15px;
     padding: 20px 20px;
-    
-    
+
+
 }
 
 
@@ -160,6 +172,13 @@ main {
     padding: 120px 20px;
     gap: 20px;
     border-bottom: solid 0.1px rgb(0, 0, 0);
+}
+
+.skills-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .cont-skills {
@@ -399,14 +418,98 @@ main {
 }
 
 .caixa-exp {
+    display: flex;
+    justify-content: center;
     width: 1100px;
-    height: 300px;
+    height: 400px;
     background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
     border-radius: 10px;
     box-shadow: 5px 10px 20px rgb(12, 12, 12);
+
+}
+
+.caixa-exp:hover {
+    background: linear-gradient(-45deg, #15171a, rgb(43, 43, 43));
+}
+
+.caixa-exp-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    padding: 20px 40px;
+}
+
+.logo-empresa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    background-color: aliceblue;
+    transition: transform 0.5s;
+}
+
+.logo-empresa:hover {
+    transform: scale(1.02)
+}
+
+.caixa-exp-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    width: 60%;
+    padding-left: 40px;
+    gap: 10px;
+}
+
+.caixa-exp-center>h1 {
+    font-weight: 200;
+    font-size: 2em;
+    color: aliceblue;
+}
+
+.ano-destaque {
+    display: flex;
+    justify-content: center;
+    width: 120px;
+    background-color: rgb(255, 1, 79);
+    border-radius: 10px;
+    color: aliceblue;
+    font-size: 0.9em;
+    padding: 2px;
+}
+
+.caixa-exp-right {
+    display: flex;
+    align-items: center;
+    width: 20%;
+    padding-right: 40px;
+}
+
+.btn-contact {
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
+    box-shadow: 5px 10px 20px rgb(12, 12, 12);
+    border: none;
+    color: #cecece;
+    transition: transform 1s;
+    font-weight: 600;
+}
+
+.btn-contact:hover {
+    background: rgb(255, 1, 79);
+    color: black;
+    transform: translateY(-5px);
 }
 
 .educacao {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -414,17 +517,185 @@ main {
     background-color: #212428;
     border-bottom: solid 0.1px rgb(0, 0, 0);
     padding: 120px 80px;
+    gap: 40px;
+    
+}
+
+.educacao-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .portifolio {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     grid-area: portifolio;
     background-color: #212428;
     border-bottom: solid 0.1px rgb(0, 0, 0);
     padding: 120px 80px;
+    gap: 40px;
+    box-sizing: border-box;
 
+}
+
+.portifolio-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.portifolio-container {
+    width: 95%;
+    max-width: 1400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    box-sizing: border-box;
+    
+}
+
+.portifolio-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 32%;
+    max-width: 450px;
+    height: 500px;
+    background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
+    box-shadow: 5px 10px 20px rgb(12, 12, 12);
+    border-radius: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
+    gap: 10px;
+}
+
+.portifolio-box:hover{
+    background: linear-gradient(-45deg, #15171a, rgb(43, 43, 43));
+}
+
+.portifolio-image {
+    width: 100%;
+    height: 70%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.imagem-thumb-1 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/calculadora-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-1:hover {
+    transform: scale(1.1);
+}
+
+.imagem-thumb-2 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/meteorologia-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-2:hover {
+    transform: scale(1.1);
+}
+
+.imagem-thumb-3 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/kanban-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-3:hover {
+    transform: scale(1.1);
+}
+
+.imagem-thumb-4 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/cronometro-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-4:hover {
+    transform: scale(1.1);
+}
+
+.imagem-thumb-5 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/gerador-senha-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-5:hover {
+    transform: scale(1.1);
+}
+
+.imagem-thumb-6 {
+    width: 100%;
+    height: 100%;
+    background-image: url("../imagens/jogo-da-velha-thumb.png");
+    background-size: cover;
+    background-position: center;
+    transition: all 1s;
+}
+
+.imagem-thumb-6:hover {
+    transform: scale(1.1);
+}
+
+.portifolio-info {
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; 
+    
+} 
+
+.portifolio-info > h1 {
+    font-size: 1.5em;
+}
+
+.portifolio-info > button {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
+    box-shadow: 5px 10px 20px rgb(12, 12, 12);
+    border: none;
+    color: #cecece;
+    transition: transform 1s;
+}
+
+.portifolio-info > button:hover {
+    background: rgb(255, 1, 79);
+    color: black;
+    transform: translateY(-5px); 
 }
 
 .contato {
@@ -448,30 +719,35 @@ main {
 }
 
 .contato-container {
+    width: 95%;
+    max-width: 1400px;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     gap: 40px;
+    
 }
 
 .contato-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 400px;
-    height: 600px;
+    width: 40%;
+    height: 700px;
     background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
     border-radius: 15px;
     box-shadow: 5px 10px 20px rgb(12, 12, 12);
-    font-size: 1.2em;
-    gap: 50px;
+    gap: 10px;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 40px;
     font-size: 1em;
+    flex-wrap: wrap;
 
 }
+
+
 
 .redes-sociais {
     display: flex;
@@ -521,17 +797,18 @@ main {
 .contato-container>.form {
     display: flex;
     flex-direction: column;
-    width: 600px;
-    height: 600px;
+    width: 60%;
+    height: 700px;
     background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
     border-radius: 15px;
     box-shadow: 5px 10px 20px rgb(12, 12, 12);
     font-size: 1.2em;
-    padding: 30px;
+    padding: 40px;
     color: rgb(203, 214, 223);
     font-size: 1em;
     box-sizing: border-box;
-    gap: 20px;
+    gap: 0px;
+    
 
 
 
@@ -541,33 +818,39 @@ input {
     box-sizing: border-box;
     width: 100%;
     height: 40px;
-    background-color: #cecece;
+    background-color: #1b1b1b;
     border-radius: 10px;
     text-align: start;
     padding: 5px;
+    color: aliceblue;
+    border: outset 2px #222222;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px rgb(43, 43, 43), 0 1px 0 rgb(92, 92, 92);
 
 }
 
 input:focus {
     border: solid 2px rgb(255, 1, 79);
     outline: 0;
-    background-color: rgb(230, 230, 230);
+    background-color: #1b1b1b;
 }
 
 
 #form-msg {
-    height: 200px;
+    height: 260px;
     text-align: start;
     resize: none;
     border-radius: 10px;
-    background-color: #cecece;
+    background-color: #1b1b1b;
     padding: 5px;
+    color: aliceblue;
+    border: outset 2px #222222;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px rgb(43, 43, 43), 0 1px 0 rgb(92, 92, 92);
 }
 
-textarea:focus {
+#form-msg:focus {
     border: solid 2px rgb(255, 1, 79);
     outline: 0;
-    background-color: rgb(230, 230, 230);
+    background-color: #1b1b1b;
 }
 
 form>button {
@@ -580,10 +863,11 @@ form>button {
     border: none;
     color: #cecece;
     transition: transform 1s;
+    font-weight: 600;
 }
 
 form>button:hover {
-    background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
+    background: rgb(255, 1, 79);
     color: black;
     transform: translateY(-5px);
 
@@ -651,8 +935,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    
+    gap: 40px;
+
 
 }
 
@@ -676,12 +960,18 @@ h1 {
     font-weight: bold;
 }
 
+h2 {
+    color: rgb(255, 1, 79);
+    font-weight: 200;
+    font-size: 1em;
+}
+
 h3 {
     color: rgb(203, 214, 223);
 }
 
 p {
-
+font-size: 1.1em;
     color: rgb(189, 199, 207);
 }
 
