--- a/css/gkanban.css
+++ b/css/gkanban.css
@@ -339,6 +339,7 @@ h1 {
 #btn-add-coluna:hover {
     background-color: rgb(22, 192, 155);
     cursor: pointer;
+    transform: translateY();
 }
 
 .add-text-card:hover {
