--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -195,7 +195,7 @@ main {
 .cont-skills>.left {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 450px;
     gap: 10px;
 
@@ -204,7 +204,7 @@ main {
 .cont-skills>.right {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 450px;
     gap: 10px;
 
@@ -227,19 +227,15 @@ main {
     justify-content: flex-start;
     align-items: center;
     box-sizing: border-box;
-    width: 400px;
-    height: 50px;
-    background: linear-gradient(175deg, #0f1113, rgb(43, 43, 43));
+    width: 450px;
+    height: 25px;
+    background: linear-gradient(175deg, #0f1113, #212428);
     border-radius: 20px;
     padding: 5px;
-    box-shadow: 1px 10px 20px rgb(20, 20, 20);
-    transition: transform 1s;
+
 
 }
 
-.barra:hover {
-    transform: translateX(15px);
-}
 
 
 
@@ -249,7 +245,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 95%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
     border-radius: 20px;
     color: rgb(240, 248, 255);
@@ -262,7 +258,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 100%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
     border-radius: 20px;
     color: aliceblue;
@@ -275,7 +271,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 80%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
     border-radius: 20px;
     color: aliceblue;
@@ -288,7 +284,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 75%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
     border-radius: 20px;
     color: aliceblue;
@@ -301,7 +297,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 95%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
     border-radius: 20px;
     color: aliceblue;
@@ -314,7 +310,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 70%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #f3407c, rgb(143, 67, 194));
     border-radius: 20px;
     color: aliceblue;
@@ -327,7 +323,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 98%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #00ffd5, rgb(0, 140, 255));
     border-radius: 20px;
     color: rgb(0, 0, 0);
@@ -340,7 +336,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 96%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #00ffd5, rgb(0, 140, 255));
     border-radius: 20px;
     color: rgb(0, 0, 0);
@@ -353,7 +349,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 87%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #00ffd5, rgb(0, 140, 255));
     border-radius: 20px;
     color: rgb(0, 0, 0);
@@ -366,7 +362,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 80%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #00ffd5, rgb(0, 140, 255));
     border-radius: 20px;
     color: rgb(0, 0, 0);
@@ -379,7 +375,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 95%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #00ffd5, rgb(0, 140, 255));
     border-radius: 20px;
     color: rgb(0, 0, 0);
@@ -392,7 +388,7 @@ main {
     justify-content: right;
     align-items: center;
     width: 75%;
-    height: 45px;
+    height: 20px;
     background: linear-gradient(-45deg, #00ffd5, rgb(0, 140, 255));
     border-radius: 20px;
     color: rgb(0, 0, 0);
@@ -408,7 +404,7 @@ main {
     border-bottom: solid 0.1px rgb(0, 0, 0);
     padding: 120px 80px;
     gap: 40px;
-    font-size: 1.3em;
+    
 }
 
 .cabecalho-exp {
@@ -438,6 +434,7 @@ main {
     align-items: center;
     width: 20%;
     padding: 20px 40px;
+    border-right: 1px solid #0f1113;
 }
 
 .logo-empresa {
@@ -446,7 +443,7 @@ main {
     align-items: center;
     width: 180px;
     height: 180px;
-    border-radius: 50%;
+    border-radius: 10%;
     background-color: aliceblue;
     transition: transform 0.5s;
     box-shadow: 5px 10px 20px rgb(12, 12, 12);
@@ -464,6 +461,7 @@ main {
     width: 60%;
     padding-left: 40px;
     gap: 10px;
+    border-left: 1px solid #2c2f33;
 }
 
 .caixa-exp-center>h1 {
@@ -488,6 +486,7 @@ main {
     align-items: center;
     width: 20%;
     padding-right: 40px;
+
 }
 
 .btn-contact {
@@ -510,7 +509,7 @@ main {
 }
 
 .educacao {
-    
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -519,7 +518,7 @@ main {
     border-bottom: solid 0.1px rgb(0, 0, 0);
     padding: 120px 80px;
     gap: 40px;
-    
+
 }
 
 .educacao-header {
@@ -561,7 +560,7 @@ main {
     flex-wrap: wrap;
     gap: 20px;
     box-sizing: border-box;
-    
+
 }
 
 .portifolio-box {
@@ -574,21 +573,41 @@ main {
     background: linear-gradient(-45deg, #212428, rgb(43, 43, 43));
     box-shadow: 5px 10px 20px rgb(12, 12, 12);
     border-radius: 20px;
-    padding: 20px;
     box-sizing: border-box;
     overflow: hidden;
-    gap: 10px;
 }
 
-.portifolio-box:hover{
+.box-header{
+    width: 100%;
+    height: 70%;
+    box-sizing: border-box;
+    padding: 20px;
+    border-bottom: 1px solid #0f1113;
+}
+
+.box-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 30%;
+    border-top: 1px solid #2c2f33;
+    box-sizing: border-box;
+    padding: 20px;
+    
+}
+
+.portifolio-box:hover {
     background: linear-gradient(-45deg, #15171a, rgb(43, 43, 43));
 }
 
 .portifolio-image {
     width: 100%;
-    height: 70%;
+    height: 100%;
     border-radius: 20px;
     overflow: hidden;
+    
 }
 
 .imagem-thumb-1 {
@@ -670,19 +689,20 @@ main {
 }
 
 .portifolio-info {
-    height: 30%;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
     
-} 
+}
 
-.portifolio-info > h1 {
+.portifolio-info>h1 {
     font-size: 1.5em;
 }
 
-.portifolio-info > button {
+.portifolio-info>button {
     width: 100%;
     height: 50px;
     border-radius: 10px;
@@ -693,10 +713,10 @@ main {
     transition: transform 1s;
 }
 
-.portifolio-info > button:hover {
+.portifolio-info>button:hover {
     background: rgb(255, 1, 79);
     color: black;
-    transform: translateY(-5px); 
+    transform: translateY(-5px);
 }
 
 .contato {
@@ -728,7 +748,7 @@ main {
     justify-content: space-between;
     width: 100%;
     gap: 40px;
-    
+
 }
 
 .contato-info {
@@ -809,7 +829,7 @@ main {
     font-size: 1em;
     box-sizing: border-box;
     gap: 0px;
-    
+
 
 
 
@@ -825,7 +845,7 @@ input {
     padding: 5px;
     color: aliceblue;
     border: outset 2px #222222;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px rgb(43, 43, 43), 0 1px 0 rgb(92, 92, 92);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .39), 0 -1px 1px rgb(43, 43, 43), 0 1px 0 rgb(92, 92, 92);
 
 }
 
@@ -845,7 +865,7 @@ input:focus {
     padding: 5px;
     color: aliceblue;
     border: outset 2px #222222;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,.39), 0 -1px 1px rgb(43, 43, 43), 0 1px 0 rgb(92, 92, 92);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .39), 0 -1px 1px rgb(43, 43, 43), 0 1px 0 rgb(92, 92, 92);
 }
 
 #form-msg:focus {
@@ -971,8 +991,13 @@ h3 {
     color: rgb(203, 214, 223);
 }
 
+h4 {
+    color: rgb(206, 211, 214);
+    font-weight: 200;
+}
+
 p {
-font-size: 1.1em;
+    font-size: 1.1em;
     color: rgb(189, 199, 207);
 }
 
